--- a/css/screen.css
+++ b/css/screen.css
@@ -5,15 +5,17 @@ html {
   overflow: hidden;
   height: 100%;
   width: 100%;
-  background: #C6A63D;
+  background: #c4ae64;
 }
 
 #wrap {
   margin: auto;
+  position: relative;
 }
 
 svg {
-  background: #D2C187;
+  background: rgba(210, 193, 135, 0.6);
   height: 100%;
   width: 100%;
 }
+
